[gd_scene load_steps=7 format=3 uid="uid://cdelx73qgmjge"]

[ext_resource type="Script" path="res://levels/celar/Game2P/card_frame/card_frame.gd" id="1_b8irq"]
[ext_resource type="PackedScene" uid="uid://dtlgrkau5ckeq" path="res://utilities/scenes/draggable/draggable.tscn" id="2_svcgx"]
[ext_resource type="Texture2D" uid="uid://rb2ve6qkkj8o" path="res://levels/celar/Game2P/card_frame/assets/tool_1.png" id="4_0ilg0"]
[ext_resource type="Texture2D" uid="uid://dgs0ucup5e8xe" path="res://levels/celar/Game2P/card_frame/assets/tool_2.png" id="5_mpynu"]
[ext_resource type="Texture2D" uid="uid://ck53nrgw67050" path="res://levels/celar/Game2P/card_frame/assets/tool_3.png" id="6_don15"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_hmx12"]
size = Vector2(106.556, 238.916)

[node name="CardFrame" type="Node2D"]
script = ExtResource("1_b8irq")

[node name="Draggable" parent="." instance=ExtResource("2_svcgx")]
position = Vector2(0, -74)

[node name="tool" type="Sprite2D" parent="Draggable"]
scale = Vector2(0.280001, 0.280001)

[node name="tool2" type="Sprite2D" parent="Draggable"]
visible = false
position = Vector2(1.90735e-06, 1.90735e-06)
scale = Vector2(0.28125, 0.262695)
texture = ExtResource("4_0ilg0")

[node name="tool3" type="Sprite2D" parent="Draggable"]
visible = false
position = Vector2(-7.5, -3)
scale = Vector2(0.229492, 0.267578)
texture = ExtResource("5_mpynu")

[node name="tool4" type="Sprite2D" parent="Draggable"]
visible = false
position = Vector2(-23.5, -22.5)
scale = Vector2(0.180664, 0.229492)
texture = ExtResource("6_don15")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Draggable"]
position = Vector2(-1, -0.499998)
scale = Vector2(1.16371, 0.632022)
shape = SubResource("RectangleShape2D_hmx12")

[node name="Label" type="Label" parent="Draggable"]
offset_left = -23.0
offset_top = -18.0
offset_right = 22.0
offset_bottom = 5.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
horizontal_alignment = 1
